--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -10,5 +10,22 @@
   <%= @blog.content %>
 </p>
 
+<% unless @blog.comments.count.zero? %>
+  <hr>
+
+  <p>
+    <strong>Comment:</strong>
+    <%= (@blog.comments.count).to_s + ' comments' %>
+  </p>
+
+  <p>
+    <%= render @blog.comments %>
+  </p>
+<% end %>
+
+<p>
+  <%= render 'comments/form', blog: @blog %>
+</p>
+
 <%= link_to 'Edit', edit_blog_path(@blog) %> |
 <%= link_to 'Back', blogs_path %>
