--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: ([@blog, @blog.comments.build]) do |f| %>
+<%= form_with model: ([blog, @blog.comments.build]) do |f| %>
   <div class="field">
     <%= f.label :name %>
     <%= f.text_field :name %>
