--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -15,7 +15,7 @@
 
   <p>
     <strong>Comment:</strong>
-    <%= '#{@blog.comments.count} comments' %>
+    <%= @blog.comments.count.to_i + "comments" %>
   </p>
 
   <p>
