--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Editing Blog</h1>
+<%# ErrorCause: not showing form otherwise its rendring
+FixReason: Fix lack of "=" afterr % to show %>
+<%= render 'form', blog: @blog %>
 
-<% render 'form', blog: @blog %>
-
-<%= link_to 'Show', @blog %> |
+<%= link_to 'Show', @blog %>
 <%= link_to 'Back', blogs_path %>
