--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_with(model: Blog.new, local: true) do |form| %>
+<%# ErrorCause: no value taken over
+FixReason: user instance variable %>
+<%= form_with(model: @blog, local: true) do |form| %>
   <% if blog.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
