--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Blog</h1>
 <%# ErrorCause: not showing form otherwise its rendring
-FixReason: Fix lack of "=" afterr % to show %>
+FixReason: Fix lack of "=" after % to show %>
 <%= render 'form', blog: @blog %>
 
 <%= link_to 'Show', @blog %>
