fix blogs_controller blog_params

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: Blog.new, local: true) do |form| %>
+<%= form_with(model: @blog, local: true) do |form| %>
   <% if blog.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
+      <h2><%= pluralize(@blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
 
       <ul>
-      <% blog.errors.full_messages.each do |message| %>
+      <% @blog.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
